--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,28 @@
-#canvas {
-  width: 600px;
-  padding: 200px 20px;
-  text-align: center;
-  border: 1px solid #333;
+#bag {
+  width: 200px;
+  height: 500px;
+  margin: 0 auto;
+  background: url("/img/bag.png") center no-repeat;
+  background-size: 80%;
 }
 
-span {
-  background: red;
-  display: inline-block;
-  padding: 10px;
-  color: #fff;
-  margin: 10px 0;
+#bag.burst {
+  background: url("/img/bag-burst.png") center no-repeat;
+  background-size: 80%;
 }
 
-.available span {
-  background: green;
+#bag-health {
+  width: 200px;
+  border: 2px solid black;
+  margin: 0 auto 20px auto;
 }
 
-.nearby span:hover {
-  content: "nearby";
-  margin-left: 10px;
+#bag-health div {
+  height: 20px;
+  background: crimson;
+}
+
+#controls {
+  width: 120px;
+  margin: 0 auto;
 }
